--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
+    <body style="background-color:rgb(59, 202, 135);"></body>
     <head>
         <title>Pārbaudes darbs</title>
         <meta charset="UTF-8">
-        <link rel="styleshet" href="bildes/darbs.css">
+        <link rel="styleshet">
+        <style>
+            table, th, td {
+              border: 1px solid rgb(26, 14, 133);
+            }
+            </style>
     </head>
     <body>
-        <h1>Pārbaudes darbs</h1>
-        <ol>
-            <li>Drīz</li>
-            <li>būs</li>
-            <li>Lieldienas!</li>
-        </ol>
-        <table>
+        <h1 style="color:rgb(218, 214, 6)"class="right">Pārbaudes darbs</h1>
+        <p>100. Drīz</p>
+        <p>101. būs</p>
+        <p>102. Lieldienas!</p>
+        <table >
             <tr>
                 <th> Gadalaiki</th>
                 <th> Patīk</th>
+                <th> Nepatīk</th>
             </tr>
             <tr>
                 <td> Rudens</td>
@@ -35,12 +40,12 @@
             <tr>
                 <td> Pavasaris</td>
                 <td> </td>
-                <td><img src="pavasaris.png" > </td>
+                <td><img src="pavasaris.png"> </td>
             </tr>
         </table>
         <br>
-    <div>
-        <img src="bildes/zakis.png" >
+    <div style="background-color:powderblue;">
+        <img src="zakis.png" >
     </div>
     </body>
 </html>
